2007-03-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* build.xml: Beginning development of pfixcore-0.10.1-pre
	* build.xml: Releasing pfixcore-0.10.0

2007-03-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/beans/metadata/DOMInit.java: ignore
	missing beanmetadata.xml
	* src/de/schlund/pfixcore/webservice/config/GlobalServiceConfig.java: ignore
	beanmetadata.xml in difference check
	* skel/projects/common/conf/factory.xml: remove ExceptionHandler

2007-03-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/editor2/txt/util_includes.xml: 
	* projects/core/editor2/xsl/runtime.xsl: 
	Added escaping for include part names on javascript code generation
	to fix problem with part names containing quotes.

2007-03-09  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/ContextXMLServlet.java: (needsSSL):
	Fixed a bug causing a 500 error where a 404 error would be more appropriate. 

	* src/de/schlund/pfixcore/webservice/Constants.java: 
	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java: 
	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java: 
	* src/de/schlund/pfixxml/ContextXMLServlet.java: 
	* src/de/schlund/pfixxml/DirectOutputServlet.java: 
	* src/de/schlund/pfixxml/ServerContextStore.java: 
	* src/de/schlund/pfixxml/SessionContextStore.java: 
	* projects/core/build/create_webxml.xsl: 
	Rewrote context store mechanism. Context instances are now stored by two 
	classes which unify the access of the session and servlet context.
	Added support for a "<foreigncontext>" tag in the project.xml.in which
	can replace the context reference specified within the servlet configuration.
	
	* projects/webservice/conf/project.xml.in: 
	* projects/webservice/conf/webservice.conf.xml: 
	* projects/sample1/conf/project.xml.in: 
	* projects/sample1/conf/direct.conf.xml: 
	Moved context reference into project configuration using the new feature.
