@@ -3,6 +3,7 @@
   <part name="content">
     <theme name="default">
       <center>
+        <pfx:include part="test"/>
         <pfx:forminput target="_top">
           <table width="400">
             <tr>
@@ -262,4 +263,7 @@
     </theme>
   </part>
 
+  <part name="test">
+    <theme name="default">Foo</theme>
+  </part>
 </include_parts>
