@@ -9,4 +9,7 @@
     <caster class="de.schlund.pfixcore.generator.casters.ToBoolean"/>
   </param>
   <param type="java.lang.String" name="StoredContent" occurrence="optional"/>
+  <param type="java.lang.Boolean" name="PreserveFormat" occurrence="optional">
+    <caster class="de.schlund.pfixcore.generator.casters.ToBoolean"/>
+  </param>
 </interface>
